[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pysodium-cardano"
dynamic = ["version"]
description = 'Python wrapper for the Cardano fork of libsodium.'
readme = "README.md"
requires-python = ">=3.8"
license = "BSD-2-Clause"
keywords = []
authors = [
  { name = "Dylan Crocker", email = "dylan@viperscience.com" },
  { name = "Willie MArchetto", email = "willie@viperscience.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/unknown/pysodium-cardano#readme"
Issues = "https://github.com/unknown/pysodium-cardano/issues"
Source = "https://github.com/unknown/pysodium-cardano"

[tool.hatch.version]
path = "src/pysodium_cardano/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/pysodium_cardano tests}"

[tool.coverage.run]
source_pkgs = ["pysodium_cardano", "tests"]
branch = true
parallel = true
omit = [
  "src/pysodium_cardano/__about__.py",
]

[tool.coverage.paths]
pysodium_cardano = ["src/pysodium_cardano", "*/pysodium-cardano/src/pysodium_cardano"]
tests = ["tests", "*/pysodium-cardano/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
